Add a landing page and logo images

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Knowme</title>
 </head>
 <body>
-  
+  <section class="landing-page">
+    <nav>
+            <img src="logo2.png" alt="company logo">
 </body>
 </html>
