--- a/index.html
+++ b/index.html
@@ -10,5 +10,13 @@
   <section class="landing-page">
     <nav>
             <img src="logo2.png" alt="company logo">
+            <div class="nav-links">
+              <ul>
+                  <li><a href="#About">About</a></li>
+                  <li><a href="#puzzle">Puzzlegames</a></li>
+                  <li><a href="#Contacts">Contacts</a></li>
+              </ul>
+          </div> 
+      </nav>         
 </body>
 </html>
