Add a description of web application

--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
                   <li><a href="#Contacts">Contacts</a></li>
               </ul>
           </div> 
-      </nav>         
+      </nav>     
+      <div class="impression">    
+        <img src="get.jpeg" alt="A pic of get to know you" width="400px">
+          <div class="landing">
+              <h1>Knowme <br>akan<span></span></h1>
+              <p>
+                <strong>Hello!</strong> Having an   ?
+                  Are you ready to have fun!?
+                  You are in the right place. You simple need to input your birthday date, your gender,submit it and wallah you have your <em>Akan</em> name. Lets do it <span>Yeah, you got get your <strong>Akan Name whoop whoop!
+
+                    <br>fill the form below!!
+              </p>  
 </body>
 </html>
