Add form and labels

--- a/index.html
+++ b/index.html
@@ -29,5 +29,42 @@
 
                     <br>fill the form below!!
               </p>  
+            </div>
+          </div>
+      </section>
+      <section id="About">
+          <div class="about">
+              <h2>GET YOUR AKAN NAME</h2>
+              <div class="mobile">    
+                  
+    <div id="error"></div>
+    <form id="form" action="/" method="get">
+      <div>
+        <label for="day">day</label>
+        <select name="day" id="day">
+          <option value="Mon">Mon</option>
+          <option value="Tue">Tue</option>
+          <option value="Wed">Wed</option>
+          <option value="Thur">Thur</option>
+          <option value="Fri">Fri</option>
+          <option value="Sat">Sat</option>
+          <option value="Sun">Sun</option> 
+        </select>
+      </div>
+      <div>
+        <label for="month">month</label>
+        <input id="month" type="month" required>
+      </div>
+      <div>
+        <label for="year">year</label>
+        <input id="year" type="year" required>
+      </div>
+      <div>
+        <label for="gender">gender</label>
+        <select name="gender" id="gender">
+          <option value="female">female</option>
+          <option value="male">male</option>
+        </select>
+      </div>
 </body>
 </html>
