Add button feature

--- a/index.html
+++ b/index.html
@@ -66,5 +66,7 @@
           <option value="male">male</option>
         </select>
       </div>
+      <button type="submit">submit</button>
+</form>
 </body>
 </html>
