link js script to html

--- a/index.html
+++ b/index.html
@@ -68,5 +68,6 @@
       </div>
       <button type="submit">submit</button>
 </form>
+<script defer src="script.js" type="text/javascript"></script>
 </body>
 </html>
