--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <section id="About">
           <div class="about">
               <h2>GET YOUR AKAN NAME</h2>
-              <div class="mobile">    
+              <div class="unique">    
                   
     <div id="error"></div>
     <form id="form" action="/" method="get">
