--- a/index.html
+++ b/index.html
@@ -37,38 +37,23 @@
           <div class="about">
               <h2>GET YOUR AKAN NAME</h2>
               <div class="unique">    
-                  
-    <div id="error"></div>
-    <form id="form" action="/" method="get">
-      <div>
-        <label for="day">day</label>
-        <select name="day" id="day">
-          <option value="Mon">Mon</option>
-          <option value="Tue">Tue</option>
-          <option value="Wed">Wed</option>
-          <option value="Thur">Thur</option>
-          <option value="Fri">Fri</option>
-          <option value="Sat">Sat</option>
-          <option value="Sun">Sun</option> 
-        </select>
-      </div>
-      <div>
-        <label for="month">month</label>
-        <input id="month" type="month" required>
-      </div>
-      <div>
-        <label for="year">year</label>
-        <input id="year" type="year" required>
-      </div>
-      <div>
-        <label for="gender">gender</label>
-        <select name="gender" id="gender">
-          <option value="female">female</option>
-          <option value="male">male</option>
-        </select>
-      </div>
-      <button type="submit">submit</button>
-</form>
-<script defer src="script.js" type="text/javascript"></script>
+ <form name="getName">
+   <label for="day">dateofBirth</label>
+   <input type="number" id="day" name="date" placeholder="input date"><br>
+
+   <label for="month">month of birth</label>
+   <input type="number" id="month" name="month" placeholder="input month"><br>
+
+   <label for="year"></label>
+   <input type="number" id="year" name="year" placeholder="input year"><br>
+
+   <select id="gender">
+     <option value="male">male</option>
+     <option value="female">female</option>
+   </select>
+   <input type="submit" value="Submit" onclick="getName()">
+
+ </form>
+<script defer src="./script.js"></script>
 </body>
 </html>
