--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Knowme</title>
   <link rel="stylesheet" href="/styles.css">
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 </head>
 <body>
   <section class="landing-page">
@@ -44,16 +45,16 @@
    <label for="month">month of birth</label>
    <input type="number" id="month" name="month" placeholder="input month"><br>
 
-   <label for="year"></label>
+   <label for="year">year of birth</label>
    <input type="number" id="year" name="year" placeholder="input year"><br>
-
+   <label for="gender">gender</label>
    <select id="gender">
      <option value="male">male</option>
      <option value="female">female</option>
-   </select>
-   <input type="submit" value="Submit" onclick="getName()">
+   </select><br>
 
+   <input type="submit" value="Submit" onclick="show()">
  </form>
-<script defer src="./script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
