add features to the body

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   Are you ready to have fun!?
                   You are in the right place. You simple need to input your birthday date, your gender,submit it and wallah you have your <em>Akan</em> name. Lets do it <span>Yeah, you got get your <strong>Akan Name whoop whoop!
 
-                    <br>fill the form below!!
+                    <br>see the form below!! Have fun!!
               </p>  
             </div>
           </div>
